@@ -183,6 +183,10 @@ name|equals
 argument_list|(
 name|lastRegex
 argument_list|)
+operator|||
+name|p
+operator|==
+literal|null
 condition|)
 block|{
 name|lastRegex
