@@ -140,6 +140,9 @@ Trunk - Unreleased
 
     HIVE-496. UDFDate fails on null. (Zheng Shao via pchakka)
 
+    HIVE-498. Fix null pointer exception in UDFRegExp when
+    the expression string is empty. (Zheng Shao via athusoo)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
